--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint .",
-    "deploy": "gh-pages -b main -d build",
+    "deploy": "gh-pages -b main -d dist",
     "start": "vite"
   },
   "dependencies": {
