--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/icons-material": "^6.1.10",
+    "@ungap/structured-clone": "^1.2.1",
     "font-awesome": "^4.7.0",
     "react": "^18.3.1",
     "react-anchor-link-smooth-scroll": "^1.0.12",
