--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,10 +13,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Node.js
+      - name: Set up Node.js 17
         uses: actions/setup-node@v3
         with:
-          node-version: '16'
+          node-version: '17'
 
       - name: Install dependencies
         run: npm install
